# ffi_examples

./: .gitignore  Cargo.toml  Project.toml  README.md  build.py  juliacalldeps.json  pyproject.toml  setup.py
ffi_examples/: __init__.py  juliacalldeps.json  nim_example.nim
ffi_examples/c/: example.c
ffi_examples/cpp/: cpp_example.cpp
ffi_examples/cython/: __init__.py  one.pyx  one_cy.py
ffi_examples/nim/: __init__.py  example.nim  example.nimble
ffi_examples/python/: __init__.py
src/: FfiExamples.jl  lib.rs
tests/: test_basic.py  test_pythoninteropexamples.py
