[tool.poetry]
name = "ffi_examples"
version = "0.1.0"
description = ""
authors = ["Michael Sundvick <michsund@outlook.co.nz>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.21.2"
juliacall = { git = "https://github.com/cjdoris/PythonCall.jl" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-profiling = "^1.7.0"
snakeviz = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
